...
              Container(
                padding: EdgeInsets.all(20.0),
                child: Form(
                  key: _formKey,
                  child: TextFormField(
                    style: TextStyle(color: Colors.black),
                    key: Key('text-field'),
                    controller: _controller,
                    decoration: kTextInputStyle,
                    validator: (value) =>
                        (value == null || value.isEmpty) ? 'Input some text!' : null,
                  ),
                ),
              ),
              SizedBox(
                height: 20.0,
              ),
...
